tests/fail/missing_params.rs
fn main() {
    sscanf::sscanf!();
    sscanf::sscanf!("5");
    sscanf::sscanf!("5",);
    sscanf::sscanf!("5", 'x');
    sscanf::sscanf!("5", usize);
    sscanf::sscanf_get_regex!();
}
