tests/fail/missing_params.stderr
error: at least 2 Parameters required: Input and format string
 --> tests/fail/missing_params.rs:2:5
  |
2 |     sscanf::sscanf!();
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf` (in Nightly builds, run with -Z macro-backtrace for more info)

error: at least 2 Parameters required: Missing format string
 --> tests/fail/missing_params.rs:3:21
  |
3 |     sscanf::sscanf!("5");
  |                     ^^^

error: at least 2 Parameters required: Missing format string
 --> tests/fail/missing_params.rs:4:24
  |
4 |     sscanf::sscanf!("5",);
  |                        ^

error: expected string literal
 --> tests/fail/missing_params.rs:5:26
  |
5 |     sscanf::sscanf!("5", 'x');
  |                          ^^^

error: expected string literal
 --> tests/fail/missing_params.rs:6:26
  |
6 |     sscanf::sscanf!("5", usize);
  |                          ^^^^^

error: missing parameter: format string
 --> tests/fail/missing_params.rs:7:5
  |
7 |     sscanf::sscanf_get_regex!();
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sscanf::sscanf_get_regex` (in Nightly builds, run with -Z macro-backtrace for more info)
